--- a/crm_back/pom.xml
+++ b/crm_back/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cn.kerlin</groupId>
-  <artifactId>crm</artifactId>
+  <artifactId>crm_back</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
